--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,13 @@
 
 button{
     margin: 0;
-    padding: 0;
+    padding: 5px 10px;
     background-color: var(--accent);
     color: var(--text-secondary);
     border: 2px var(--text-secondary) solid;
     border-radius: 10px;
+    font-size: 14px;
+    font-weight: 600;
 }
 
 .App{
