--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -8,6 +8,8 @@
     flex-wrap: nowrap;
     flex-flow: row;
     justify-content: space-between;
+    border-radius: 8px;
+    border-top-left-radius: 0;
 }
 
 .NavBar nav{
